anchor ref + chrome scrollbar fix

--- a/sdk/packages/modal/src/components/nightly-wallet-selector-page/nightly-wallet-selector-page.css
+++ b/sdk/packages/modal/src/components/nightly-wallet-selector-page/nightly-wallet-selector-page.css
@@ -180,6 +180,10 @@
   padding-bottom: 16px;
 }
 
+.walletSelectorButtons::-webkit-scrollbar {
+  display: none;
+}
+
 .walletInputSearchWrapper {
   position: relative;
   margin-bottom: 8px;
